# ComplianceAI-Agent

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy-docs.yml
app/: main.py
app/agents/: infra_agent.py  norm_agent.py  orchestrator.py
app/docs/modules/: agents.rst  services.rst
app/models/: capture_handlers.py
app/services/: llm_service.py  pdf_service.py
app/tools/: aws_tools.py  code_scanning_tools.py  infra_agent.py  jira_tool.py
backend/: .env.example  Dockerfile  pyproject.toml  test.py
backend/app/: main.py
backend/app/agents/: norm_agent.py
backend/app/docs/: Makefile  conf.py  index.rst
backend/app/docs/modules/: tools.rst
backend/app/models/: capture_handlers.py  user.py
backend/app/routers/: auth.py  setup.py
backend/app/tools/: aws_tools.py  code_scanning_tools.py  github_tools.py  jira_tool.py
backend/app/utils/: database.py
backend/complianceUI/: fast_analyze.html  hitl.html  index.html  report.html
backend/complianceUI/public/css/: dashboard.css
backend/complianceUI/public/js/: dashboard.js  hitl.js  loading.js  main.js  report.js
complianceUI/: dashboard.html  dashboard_with_alerts.html  fast_analyze.html  loading.html  setup.html
complianceUI/public/css/: hitl.css  loading.css  report.css  setup.css  styles.css
complianceUI/public/js/: dashboard.js  fast_analyze.js  loading.js  (+1 more)
db/: Dockerfile  init.sql
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
(+2 files in other folders)
