[project]
name = "complianceai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-mistralai>=0.2.10",
    "langchain-deepseek>=0.1.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "python-multipart==0.0.20",
    "boto3>=1.37.28",
]
