[project]
name = "complianceai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-mistralai>=0.2.10",
    "langchain-deepseek>=0.1.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "python-multipart==0.0.20",
    "boto3>=1.37.28",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "mysqlclient>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]
